Correct help page CSS issues (fixes #1479) - https://aspnetwebstack.codeplex.com/workitem/1479 - "Help page font flickers on navigating to service url or help page home" - Problems arise due to lousy HelpPage.css link placement and application of help page styles to site banner and footer - Scope styles in HelpPage.css to elements beneath one with the help-page (or existing help-page-table) class - Correct HelpPage.css style for the <body/> element to apply to the <div id="body"/> element in all three help page views - Move HelpPage.css link to the top of the help page views, avoiding current placement at the bottom of the page when using application layout - Use help-page class at top of the help page views
(cherry picked from commit 1fe1c1a57a7b1555f786d3f61a4414c15d15b54a)

--- a/src/WebApiHelpPage/Areas/HelpPage/HelpPage.css
+++ b/src/WebApiHelpPage/Areas/HelpPage/HelpPage.css
@@ -1,15 +1,24 @@
-﻿h1, .h1, h2, .h2, h3, .h3, body, .help-page-table th, .help-page-table pre, .help-page-table p {
+﻿.help-page h1,
+.help-page .h1,
+.help-page h2,
+.help-page .h2,
+.help-page h3,
+.help-page .h3,
+#body.help-page,
+.help-page-table th,
+.help-page-table pre,
+.help-page-table p {
     font-family: "Segoe UI Light", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
-pre.wrapped {
+.help-page pre.wrapped {
     white-space: -moz-pre-wrap;
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     white-space: pre-wrap;
 }
 
-.warning-message-container {
+.help-page warning-message-container {
     margin-top: 20px;
     padding: 0 10px;
     color: #525252;
@@ -38,7 +47,8 @@ pre.wrapped {
     vertical-align: top;
 }
 
-.help-page-table pre, .help-page-table p {
+.help-page-table pre,
+.help-page-table p {
     margin: 0px;
     padding: 0px;
     font-family: inherit;
@@ -49,11 +59,11 @@ pre.wrapped {
     background-color: #F3F3F3;
 }
 
-a:hover {
+.help-page a:hover {
     background-color: transparent;
 }
 
-.sample-header {
+.help-page sample-header {
     border: 2px solid #D4D4D4;
     background: #76B8DB;
     color: #FFFFFF;
@@ -63,7 +73,7 @@ a:hover {
     margin: 10px 0px 0px 0px;
 }
 
-.sample-content {
+.help-page sample-content {
     display: block;
     border-width: 0;
     padding: 15px 20px;
@@ -72,49 +82,52 @@ a:hover {
     margin: 0px 0px 10px 0px;
 }
 
-.api-name {
+.help-page api-name {
     width: 40%;
 }
 
-.api-documentation {
+.help-page api-documentation {
     width: 60%;
 }
 
-.parameter-name {
+.help-page parameter-name {
     width: 20%;
 }
 
-.parameter-documentation {
+.help-page parameter-documentation {
     width: 40%;
 }
 
-.parameter-type {
+.help-page parameter-type {
     width: 20%;
 }
 
-.parameter-annotations {
+.help-page parameter-annotations {
     width: 20%;
 }
 
-h1, .h1 {
+.help-page h1,
+.help-page .h1 {
     font-size: 36px;
 }
 
-h2, .h2 {
+.help-page h2,
+.help-page .h2 {
     font-size: 24px;
 }
 
-h3, .h3 {
+.help-page h3,
+.help-page .h3 {
     font-size: 20px;
 }
 
-body {
+#body.help-page {
     font-size: 14px;
     line-height: 143%;
     color: #333;
 }
 
-a {
+.help-page a {
     color: #00abec;
     text-decoration: none;
 }
